# layrics

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  meson.build  pyproject.toml
core/: binding.cpp
core/app/: Application.cpp  Application.hpp  ApplicationController.cpp  ApplicationController.hpp
core/input/: CursorManager.cpp  CursorManager.hpp  CursorTracker.cpp  CursorTracker.hpp  DamageGrid.cpp  DamageGrid.hpp  DragManager.cpp  DragManager.hpp  InputManager.cpp  InputManager.hpp  RegionManager.cpp  RegionManager.hpp
core/renderer/: AssRenderer.cpp  AssRenderer.hpp  IRenderer.hpp  RenderManager.cpp  RenderManager.hpp
core/types/: Common.hpp
core/utils/: FrameRateLimiter.cpp  FrameRateLimiter.hpp  Logger.hpp
core/wayland/: LayerShellProtocol.hpp  LayerSurface.cpp  LayerSurface.hpp  ShmBuffer.cpp  ShmBuffer.hpp  WaylandContext.cpp  WaylandContext.hpp
examples/: config.toml  main.cpp  meson.build  test_cursor.cpp  test_drag.cpp  test_simple.cpp
layrics/: __init__.py  _layrics.pyi  cache.py  config.py  layctl.py  lyricsource.py  main.py  matching.py  mpris.py
layrics/assprovider/: __init__.py  _ass.py  _base.py  _protocol.py  _ruby.py  _style.py  _util.py
layrics/karaoke/: header.py
scripts/: fix_wayland_header.py
